<resources>
    <string name="app_name">Homework</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Skillcinema</string>
    <string name="skip">Пропустить</string>
    <string name="info_onboarding1">Узнавай о премьерах</string>
    <string name="info_onboarding2">Создавай коллекции</string>
    <string name="info_onboarding3">Делись с друзьями</string>
    <string name="premieres">Премьеры</string>
    <string name="popular">Популярное</string>
    <string name="everything">Все</string>
    <string name="show_all">Показать все</string>
    <string name="top_250">Топ-250</string>
    <string name="serial">Сериалы</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="rating">%1$s %2$s</string>
    <string name="genre">%1$d, %2$s %3$s</string>
    <string name="movie_length">%1$s, %2$d мин, %3$s</string>
    <string name="movie_load_error">Информация о фильме не загружена</string>
    <string name="favourite_movies">Любимые</string>
    <string name="want_to_see">Хочу посмотреть</string>
    <string name="new_collection">Создать свою коллекцию</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="year_genre_in_bottom_sheet">%1$s, %2$s</string>
    <string name="new_collection_message">Придумайте название\n для вашей новой коллекции</string>
    <string name="ready">Готово</string>
    <string name="collection_not_added">Имя коллекции не должно быть пустым и содержать цифры и специальные символы</string>
    <string name="collection_exists">Коллекция с таким именем уже существует</string>
    <string name="no_information">Нет информации о фильме</string>
    <string name="serials_header">Сезоны и серии</string>
    <string name="seazon">Сезон</string>
    <string name="actors_in_movie">В фильме снимались</string>
    <string name="all_actors">Все актеры</string>
    <string name="best_movies">Лучшее</string>
    <string name="movies">Фильмография</string>
    <string name="to_list">К списку</string>
    <string name="chip">%1$s %2$d</string>
    <string name="no_data">Нет данных</string>
    <string name="no_person_data">Нет данных о человеке</string>
    <string name="null_rating">Список лучших фильмов пуст, т.к. у всех фильмов нулевой рейтинг</string>
    <string name="people_work_over_movie">Над фильмом работали</string>
    <string name="gallery">Галерея</string>
    <string name="related_movies">Похожие фильмы</string>
    <string name="no_movie_info">Нет фотографий</string>
    <string name="no_similar_movies">Нет похожих фильмов</string>
    <string name="season_info">%1$d сезон, %2$d серий</string>
    <string name="no_serial_info">Нет данных о сериях</string>
    <string name="no_single_episode_info">Нет данных о серии</string>
    <string name="search_string_hint">Фильмы, актеры, режиссеры</string>
    <string name="not_found">К сожалению, по вашему запросу ничего не найдено</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="show">Показывать</string>
    <string name="films">Фильмы</string>
    <string name="country">Страна</string>
    <string name="genre_name">Жанр</string>
    <string name="year">Год</string>
    <string name="rating_descr">Рейтинг</string>
    <string name="any">любой</string>
    <string name="sorting">Сортировать</string>
    <string name="date">Дата</string>
    <string name="popularity">Популярность</string>
    <string name="viewed">Просмотрен</string>
    <string name="not_viewed">Не просмотрен</string>
    <string name="apply_button">Применить</string>
    <string name="enter_country">Введите страну</string>
    <string name="russia">Россия</string>
    <string name="gb">Великобритания</string>
    <string name="gearmany">Германия</string>
    <string name="usa">США</string>
    <string name="france">Франция</string>
    <string name="enter_genre">Введите жанр</string>
    <string name="comedy">Комедия</string>
    <string name="melodrama">Мелодрама</string>
    <string name="action_movie">Боевик</string>
    <string name="western">Вестерн</string>
    <string name="drama">Драма</string>
    <string name="period">Период</string>
    <string name="search_from">Искать в период с</string>
    <string name="search_to">Искать в период до</string>
    <string name="choose">Выбрать</string>
    <string name="year_period">с %1$d до %2$d</string>
    <string name="country_is_absent">Такой страны в списке нет</string>
    <string name="genre_is_absent">Такого жанра в списке нет</string>
    <string name="period_is_wrong">Период выбран неверно: начальное значение не может быть больше конечного.</string>
    <string name="rating_textview">с %1$s до %2$s</string>
    <string name="viewed_movies">Просмотрено</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="loading_error_paging_source">Превышен лимит запросов.</string>
    <string name="clear_history">Очистить историю</string>
    <string name="collection">Коллекции</string>
    <string name="interesting">Вам было интересно</string>
    <string name="header_of_viewed_movies">Просмотренные фильмы</string>
    <string name="header_of_interested_movies">Фильмы, которые Вам были интересны</string>
    <string name="movies_from_collection">Фильмы из коллекции \"%1$s\"</string>
    <string name="no_movies">Нет фильмов</string>
    <string name="no_rating">Ошибка загрузки фильмов из коллекции Премьеры</string>
    <string name="no_random_movie">Не удалось загрузить подборку фильмов на основе страны и жанра</string>
    <string name="mistake">Произошла ошибка</string>
    <string name="activity_exception">Activity cannot be null</string>
    <string name="no_description">Нет описания</string>
    <string name="share">Поделиться</string>
    <string name="cancel">Отмена</string>
    <string name="years">%1$d-%2$d</string>
</resources>