<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar_search_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="320dp"
            android:indeterminateTint="@color/purple_700"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/base_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".search.SearchSettingsFragment">

            <RelativeLayout
                android:id="@+id/search_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="40dp">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@null"
                    android:src="@drawable/caret_left" />

                <TextView
                    android:id="@+id/search_settings_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/search_settings"
                    android:textSize="@dimen/text_size_12"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/show_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_12" />

                <RadioGroup
                    android:id="@+id/movie_type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_btn_all"
                        style="@style/RadioButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_selector_1"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/everything" />

                    <RadioButton
                        android:id="@+id/radio_btn_films"
                        style="@style/RadioButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@drawable/radio_selector_2"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/films" />

                    <RadioButton
                        android:id="@+id/radio_btn_serials"
                        style="@style/RadioButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:background="@drawable/radio_selector_3"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/serial" />

                </RadioGroup>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/country_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/search_settings_background"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/country"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/country"
                    style="@style/countryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/genre_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_settings_background"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/genre_name"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/genre"
                    style="@style/countryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/year_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_settings_background"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/year"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/year_period"
                    style="@style/countryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/rating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rating_descr"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/rating_textView"
                    style="@style/countryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/any" />

            </RelativeLayout>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rating_range_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:valueFrom="1"
                android:valueTo="10"
                app:thumbColor="@color/white"
                app:thumbRadius="12dp"
                app:thumbStrokeColor="@color/black"
                app:thumbStrokeWidth="1dp"
                app:trackColorActive="@color/purple_600"
                app:trackColorInactive="@color/grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="15dp"
                    android:text="1"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:text="10"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/sorting_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sorting"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_12" />

                <RadioGroup
                    android:id="@+id/order_type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_btn_date"
                        style="@style/RadioButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_selector_1"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/date" />

                    <RadioButton
                        android:id="@+id/radio_btn_popularity"
                        style="@style/RadioButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@drawable/radio_selector_2"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/popularity" />

                    <RadioButton
                        android:id="@+id/radio_btn_rating"
                        style="@style/RadioButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:background="@drawable/radio_selector_3"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/rating_descr" />

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/viewed_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/not_viewed" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/viewed_toggle_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textAllCaps="false"
                    android:textOff="@string/not_viewed"
                    android:textOn="@string/viewed"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/extended_search_button"
                android:text="@string/apply_button"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>